syntax = "proto3";

import"common/ComponentRequest.proto";
import"portalbooklink/PortalBookLinkResponse.proto";

option java_package = "cn.migu.selection.proto.portalbookLinkservice";
option java_outer_classname = "_PortalBookLinkService";
option java_generic_services = true;

service PortalBookLinkService{
	rpc getPortalBookLink (ComponentRequest) returns (PortalBookLinkResponse);
}