syntax = "proto3";

import"common/ComponentRequest.proto";
import"common/CommonAjaxResponse.proto";

option java_package = "cn.migu.selection.proto.portalbookLinkservice";
option java_outer_classname = "_RaffleService";
option java_generic_services = true;

service RaffleService{
	rpc exchangeLottery (ComponentRequest) returns (CommonAjaxResponse);
}